don't hard-code the details' img width and height.  use max-width and max-height instead.  this will prevent stretching of images.  consequently, images of any size or aspect ratio can now be used.  HOWEVER, the space (frame) for the picture remains 200 x 150.  that hard-coding is required because of a colorbox bug -- the colorbox needs to know the vertical sizing before the picture loads.
this means that in aspect/ratio cases when the horizontal exceeds 4:3, there will be some white space under the picture.

--- a/css/style.css
+++ b/css/style.css
@@ -230,9 +230,14 @@ ul.tilelist .blurb {
 	float:left;
 }
 
-.details img {
+.details .pictureFrame {
 	width:200px;
 	height:150px;
+}
+
+.details img {
+	max-width:200px;
+	max-height:150px;
 }
 
 .details .rightDiv {
